@@ -25,7 +25,8 @@ Small features:
     automatically called when the task does not define itself a
     callback function, in that case, it can still be called from the
     task callback function.
-  * New STARPU_WORKERS_COREID environment variable to bind workers to cores
+  * New STARPU_WORKERS_COREID, STARPU_MAIN_THREAD_COREID and
+    STARPU_MPI_THREAD_COREID environment variables to bind threads to cores
     instead of hyperthreads.
 
 StarPU 1.3.7
